# _space

./: .gitignore  AI_README.md  DEPLOY_TO_PARTHB.md  GIT_GUIDE.md  GUIDE.md  QUICK_START.md  README.md  requirements.txt  setup_parthb_github_io.sh  setup_vis42_github_io.sh  update_remote.sh
1010S/: README.md  main.py  (+4 more)
py/: .env  README.md  available_styles.py  kd.py  plan_n_plot.py  pyproject.toml  ret.py  v4.py  v5.py
py/coursework/3236/: A00310667E_BhargavaParth_PC3236_Assignment1.ipynb  A00310667E_BhargavaParth_PC3236_Assignment2.ipynb  A0288262W_GauharVishesh_PC3236_Assignment1.ipynb
py/coursework/it1244/: IT1244_A1P2.ipynb  IT1244_A3.ipynb  IT1244_A4.ipynb
py/coursework/missions/: rand.py
py/manim/: README.md  pyproject.toml
py/manim/Projects/: a1.py
py/manim/media/videos/a1/1080p60/partial_movie_files/CircleAndText/: partial_movie_file_list.txt
py/manim/media/videos/a1/480p15/partial_movie_files/CircleAndText/: partial_movie_file_list.txt
py/missions/: m3_images.py  mission03-template.py
py/qm_sim/: 3d_barrier.py  harmonic.py  quantum_barrier_interactive.ipynb  quantum_clean.py
py/randomLabs/: ELECTRON SPIN RESONANCE data anal.xls  ELECTRON SPIN RESONANCE.docx  ELECTRON SPIN RESONANCE.pptx  LaserPropaationdataFitForK.py  LaserPropagationGausianCurves.py  MercuryU2DifTemps  b  data_mercury.json  data_neon.json  dataannall.py  dfdfsskjfdkjd.py  dsflsdkflk.py  graphForDifferentU2.py  graphForDifferentU3.py  linearfittingWithYError.py  making_graphs_on_the_same page.py  neon_data_anal.py  second_method_mercuty.py  slopasfunctionoftemperature.py
(+1846 files in other folders)
