[project]
name = "py"
version = "0.1.0"
description = "Python workspace for data analysis, simulations, and visualizations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "pillow>=11.3.0",
    "scipy>=1.16.2",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
